--- a/src/DryEraseWebsite/DryEraseWeb/web.Release.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.Release.config
@@ -14,6 +14,21 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="MongoDB" value="" xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)" />
+    <add key="oauth.facebook.CallbackUrl" value="http://DryEraseWeb.azurewebsites.net/service/auth/facebook"
+         xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)" />
+    <add key="oauth.facebook.RedirectUrl" value="http://DryEraseWeb.azurewebsites.net/" xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)" />
+
+    <add key="oauth.linkedin.CallbackUrl" value="http://DryEraseWeb.azurewebsites.net/service/auth/linkedin"
+         xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)" />
+    <add key="oauth.linkedin.RedirectUrl" value="http://DryEraseWeb.azurewebsites.net/" xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)" />
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
