--- a/src/DryEraseWebsite/DryEraseWeb/web.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.config
@@ -8,7 +8,22 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
   </configSections>
-  <appSettings />
+  <appSettings >
+    <add key="oauth.facebook.ConsumerKey" value="136244329879845" />
+    <add key="oauth.facebook.ConsumerSecret" value="ab1b67994e93d3b24aedd3048f4a7932" />
+    <add key="oauth.facebook.RequestTokenUrl" value="https://api.facebook.com/uas/oauth/requestToken?scope=r_fullprofile+r_network+rw_nus+r_contactinfo" />
+    <add key="oauth.facebook.AuthorizeUrl" value="https://api.facebook.com/uas/oauth/authenticate" />
+    <add key="oauth.facebook.AccessTokenUrl" value="https://api.facebook.com/uas/oauth/accessToken" />
+    <add key="oauth.facebook.CallbackUrl" value="http://DryEraseWeb-Dev/service/auth/facebook" />
+    <add key="oauth.facebook.RedirectUrl" value="http://DryEraseWeb-Dev/" />
+    <add key="oauth.linkedin.ConsumerKey" value="h686qawps338" />
+    <add key="oauth.linkedin.ConsumerSecret" value="QrcO7krtNWCmioJE" />
+    <add key="oauth.linkedin.RequestTokenUrl" value="https://api.linkedin.com/uas/oauth/requestToken?scope=r_fullprofile+r_network+rw_nus+r_contactinfo" />
+    <add key="oauth.linkedin.AuthorizeUrl" value="https://api.linkedin.com/uas/oauth/authenticate" />
+    <add key="oauth.linkedin.AccessTokenUrl" value="https://api.linkedin.com/uas/oauth/accessToken" />
+    <add key="oauth.linkedin.CallbackUrl" value="http://DryEraseWeb-Dev/service/auth/linkedin" />
+    <add key="oauth.linkedin.RedirectUrl" value="http://DryEraseWeb-Dev/" />
+  </appSettings>
   <connectionStrings />
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -25,7 +40,7 @@
       of the security authentication mode used by 
       ASP.NET to identify an incoming user. 
     -->
-    <authentication mode="Windows" />
+<!--    <authentication mode="none" />-->
     <!--
        The <customErrors> section enables configuration 
        of what to do if/when an unhandled error occurs 
@@ -50,11 +65,11 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
+   <!-- <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
-    </modules>
+    </modules>-->
   </system.webServer>
   <elmah>
     <!--
