--- a/src/DryEraseWebsite/DryEraseWeb/packages.config
+++ b/src/DryEraseWebsite/DryEraseWeb/packages.config
@@ -5,6 +5,7 @@
   <package id="angularjs" version="1.0.5" targetFramework="net45" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="FontAwesome" version="3.0.2.3" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.1" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
