--- a/src/DryEraseWebsite/DryEraseWeb/DryEraseWeb.csproj
+++ b/src/DryEraseWebsite/DryEraseWeb/DryEraseWeb.csproj
@@ -188,6 +188,10 @@
     <Content Include="Content\font\fontawesome-webfont.ttf" />
     <Content Include="Content\font\fontawesome-webfont.eot" />
     <Content Include="Content\font\FontAwesome.otf" />
+    <Content Include="plugin\js\lib\angular-cookies.js" />
+    <Content Include="plugin\js\lib\angular-cookies.min.js" />
+    <Content Include="plugin\js\lib\angular-resource.js" />
+    <Content Include="plugin\js\lib\angular-resource.min.js" />
     <Content Include="plugin\manifest.json" />
     <None Include="PublishProfiles\dryeraseweb - FTP.pubxml" />
     <None Include="PublishProfiles\dryeraseweb - Web Deploy.pubxml" />
@@ -424,7 +428,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="LinkedInAuthProvider.cs" />
-    <Compile Include="DomainModel\CommentPost.cs" />
+    <Compile Include="DomainModel\Model.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
