updated styling for popup

--- a/src/DryEraseWebsite/DryEraseWeb/plugin/manifest.json
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/manifest.json
@@ -6,8 +6,10 @@
   "version": "1.0",
 
   "permissions": [
-    "http://dryeraseweb-dev/"
+    "http://dryeraseweb-dev/",
+    "tabs"
   ],
+  "web_accessible_resources": [ "css/lib/bootstrap.min.css", "css/popup.css"],
   "browser_action": {
     "default_icon": "images/Icon.png",
     "default_popup": "popup.html"
@@ -15,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "css" : ["css/popup.css"],
+      "css" : [ "css/lib/bootstrap.min.css", "css/lib/jquery.ui.all.css","css/popup.css"],
       "js": [ "js/lib/jquery-1.9.1.js", "js/app/content.js"]
     }],
   "background": {
