--- a/src/DryEraseWebsite/DryEraseWeb/web.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.config
@@ -9,6 +9,8 @@
     </sectionGroup>
   </configSections>
   <appSettings>
+    <add key="MongoDBConnection" value="mongodb://localhost" />
+    <add key="AppDatabase" value="DryEraseWeb" />
     <add key="oauth.facebook.ConsumerKey" value="136244329879845" />
     <add key="oauth.facebook.ConsumerSecret" value="ab1b67994e93d3b24aedd3048f4a7932" />
     <add key="oauth.facebook.RequestTokenUrl" value="https://api.facebook.com/uas/oauth/requestToken?scope=r_fullprofile+r_network+rw_nus+r_contactinfo" />
@@ -53,7 +55,8 @@
          <error statusCode="404" redirect="FileNotFound.htm" />
        </customErrors>
     -->
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
+    <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" />
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false" />
     <httpHandlers>
       <add path="api*" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" />
     </httpHandlers>
@@ -64,6 +67,9 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering allowDoubleEscaping="true"/>
+    </security>
     <validation validateIntegratedModeConfiguration="false" />
     <!-- <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
