--- a/src/DryEraseWebsite/DryEraseWeb/DryEraseWeb.csproj
+++ b/src/DryEraseWebsite/DryEraseWeb/DryEraseWeb.csproj
@@ -85,6 +85,7 @@
       <HintPath>..\packages\ServiceStack.Text.3.9.38\lib\net35\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -188,6 +189,27 @@
     <Content Include="Content\font\fontawesome-webfont.ttf" />
     <Content Include="Content\font\fontawesome-webfont.eot" />
     <Content Include="Content\font\FontAwesome.otf" />
+    <Content Include="plugin\css\lib\bootstrap-responsive.min.css" />
+    <Content Include="plugin\css\lib\bootstrap.min.css" />
+    <Content Include="plugin\css\lib\font-awesome.min.css" />
+    <Content Include="plugin\css\lib\jquery-ui.css" />
+    <Content Include="plugin\css\lib\jquery.ui.accordion.css" />
+    <Content Include="plugin\css\lib\jquery.ui.all.css" />
+    <Content Include="plugin\css\lib\jquery.ui.autocomplete.css" />
+    <Content Include="plugin\css\lib\jquery.ui.base.css" />
+    <Content Include="plugin\css\lib\jquery.ui.button.css" />
+    <Content Include="plugin\css\lib\jquery.ui.core.css" />
+    <Content Include="plugin\css\lib\jquery.ui.datepicker.css" />
+    <Content Include="plugin\css\lib\jquery.ui.dialog.css" />
+    <Content Include="plugin\css\lib\jquery.ui.menu.css" />
+    <Content Include="plugin\css\lib\jquery.ui.progressbar.css" />
+    <Content Include="plugin\css\lib\jquery.ui.resizable.css" />
+    <Content Include="plugin\css\lib\jquery.ui.selectable.css" />
+    <Content Include="plugin\css\lib\jquery.ui.slider.css" />
+    <Content Include="plugin\css\lib\jquery.ui.spinner.css" />
+    <Content Include="plugin\css\lib\jquery.ui.tabs.css" />
+    <Content Include="plugin\css\lib\jquery.ui.theme.css" />
+    <Content Include="plugin\css\lib\jquery.ui.tooltip.css" />
     <Content Include="plugin\js\lib\angular-cookies.js" />
     <Content Include="plugin\js\lib\angular-cookies.min.js" />
     <Content Include="plugin\js\lib\angular-resource.js" />
@@ -432,7 +454,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
-    <Folder Include="plugin\css\lib\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
