--- a/src/DryEraseWebsite/DryEraseWeb/web.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.config
@@ -56,7 +56,7 @@
        </customErrors>
     -->
     <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" />
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" validateRequest="false" />
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"  />
     <httpHandlers>
       <add path="api*" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" />
     </httpHandlers>
@@ -67,9 +67,7 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <security>
-      <requestFiltering allowDoubleEscaping="true"/>
-    </security>
+
     <validation validateIntegratedModeConfiguration="false" />
     <!-- <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
