--- a/src/DryEraseWebsite/DryEraseWeb/web.Release.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.Release.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="MongoDB" value="" xdt:Transform="SetAttributes"
+    <add key="MongoDBConnection" value="mongodb://app:app123@ds045107.mongolab.com:45107/DryEraseWeb" xdt:Transform="SetAttributes"
          xdt:Locator="Match(key)" />
     <add key="oauth.facebook.CallbackUrl" value="http://DryEraseWeb.azurewebsites.net/service/auth/facebook"
          xdt:Transform="SetAttributes"
