--- a/src/DryEraseWebsite/DryEraseWeb/web.config
+++ b/src/DryEraseWebsite/DryEraseWeb/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="elmah">
@@ -56,7 +56,7 @@
        </customErrors>
     -->
     <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" />
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"  />
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
     <httpHandlers>
       <add path="api*" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" />
     </httpHandlers>
@@ -69,6 +69,9 @@
   <system.webServer>
 
     <validation validateIntegratedModeConfiguration="false" />
+        <staticContent>
+            <mimeMap fileExtension=".crx" mimeType="application/x-chrome-extension" />
+        </staticContent>
     <!-- <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
